Change Log

perdition
Mail retrieval proxy server
Copyright (C) 1999-2001  Horms <horms@vergenet.net>
----------------------------------------------------------------------

xxx
(Horms)

  * Version xxx
  - Added SSL Support
  - Added loging of successful Authentication
  - Added logging of reread or map library

----------------------------------------------------------------------

9th May 2001
(Horms)

  * Version 0.1.8
  *** NB: Several options and defaults have changed meaning ***
  - Fixed Segmentation Fault that occurs when reading strings that
    have a trainling whitespace during the authentication phase.
    Thanks to Ronny Cook
  - Fixed Linking Problems in MySQL, PostgresSQL and LDAP 
    map lookup libraries.
  - Fixed (minor) casting problems with using various popt calls
  - Correct handling of litereals quoted with \" characters in
    IMAP mode.
  - Removed mutiple calls to dlerror() for a single error
  - A modified S|strip_domain option such that domain may optionally be
    stripped for zero or more of: database lookup, local authentication,
    remote login.
  - Updated documenation of MySQL module Matt Prigge
  - Added -U|--username_from_database option to control the use of
    servernames of the form user<delimiter>domain.
  - Added SSL Support
  - Added loging of successful Authentication
  - Added logging of reread or map library

----------------------------------------------------------------------

5th April 2001
(Horms)

   * Version 0.1.7
   - Red Hat init script reports status correctly
   - Fixed minor spelling errors in documentation
   - Added missing library symlings to spec file
   - Server ok line option fixed. Was expecting arguments when it
     has none.
   - Added -lresolv and -lvanessa_logger to build for perdition
     itself to fix compile problems under solaris
   - Added ability to specify columns in MySQL module
     Geoff Mitchell
   - Running perdition.pop3 and perdition.imap4 now automatically