@@ -35,3 +35,4 @@ Ronny Cook <ronny@asiaonline.net>
 Geoff Mitchell <g.mitchell@videonetworks.com>
 Willi Langenberger <wlang@wu-wien.ac.at>
 Matt Prigge <mprigge@pobox.com>
+"Erik R. Leo" <erikl@sover.net>
